# Esp_TuTruV7

./: sdkconfig
main/: CMakeLists.txt  main.cpp
main/FireBase/: FireBase.cpp  FireBase.h
main/WIFI/: WIFI.c  WIFI.h
